fix: remove unnecessary overflow on app layout

--- a/src/layouts/app-layout.module.css
+++ b/src/layouts/app-layout.module.css
@@ -1,7 +1,5 @@
 .layout {
-  height: 100vh;
-  overflow: auto;
-  scrollbar-gutter: stable;
+  min-height: 100vh;
 }
 
 .layout-inner {
